# PacBot

./: .gitignore  README.md
Analog/: .gitignore  AskIT & Feedback.url  SMComponentsList.txt
Analog/Altium/: Peak.SchDoc  Sensor.SchDoc  SensorChannel.SchDoc  Sensor_Coup_Amp.SchDoc  bat_i.SchDoc  bat_v.SchDoc  cs301_11.IntLib  cs301_11.PcbDoc  cs301_11.PrjPCB  cs301_11.SchDoc  top.SchDoc
Analog/Altium/COMSYS301_2013/: COMSYS301.PcbLib  COMSYS301.SCHLIB  COMSYS301_2013.LibPkg
Analog/Altium/COMSYS301_20131/: COMSYS301_2013.LibPkg
Analog/Altium/ECE-Parts/: EceParts.SchLib  EceParts.xls  VDD_div.SchDoc
Analog/Altium/lib/: Capacitos$.IntLib  Connectors$.IntLib  Diodes$.IntLib  ECE-Old.IntLib  ICs$.IntLib  Micros$.IntLib  OpAmps$.IntLib  Other$.IntLib  Regulators$.IntLib  Resistors$.IntLib  Transistors$.IntLib  Zeners$.IntLib  desktop.ini
Analog/Altium/lib/Connectors$/: Connectors$.LibPkg  Connectors$.PcbLib  Connectors$.SchLib
Analog/Altium/lib/OpAmps$/: OpAmps$.LibPkg  OpAmps$.PcbLib  OpAmps$.SchLib
Analog/Altium/lib/OpAmps$1/: OpAmps$.LibPkg  OpAmps$.PcbLib
Analog/Altium/lib/OpAmps$2/: OpAmps$.LibPkg
Analog/Altium/lib/OpAmps$3/: OpAmps$.LibPkg
Analog/Altium/src/: BAT_V.SchDoc  Interface.SchDoc  PT_Buffer.SchDoc  PT_Sensor.SchDoc  Sensors.SchDoc  Vref_2v5.SchDoc  cs301_11.PcbDoc  cs301_11.PcbDoc.htm  cs301_11.SchDoc  cs301_11_ref.PcbDoc  cs301_11_ref.PcbDoc.htm  opamps.SchDoc
Analog/Components/: BAT85.lib
Analog/Sensor/: analogue_circuit.asc  ibat-amplifier.asc  phototransistor-amplifier.asc  phototransistor-coupling.asc  phototransistor-filter.asc  phototransistor-peak-alt.asc  phototransistor-peak-simple.asc  phototransistor-peak.asc  phototransistor-simple.asc  vbat-amplifier.asc  vbat-divider.asc
Digital/: .gitignore  ComponentUpdateLog.txt  Robot.cywrk
Digital/CS301_Class.cydsn/: CMakeLists.txt  CS301_Class.cydwr  CS301_Class.cyprj  analog.c  analog.h  app_source.mk  arc.c  arc.h  capicallbacks.h  debug.c  debug.h  defines.h  graph.c  graph.h  listgraph.c  listgraph.h  main.c  makefile  map.h  motor.c  motor.h  movement.h  node.c  node.h  pid.c  pid.h  platform_debug.mk  quad_dec.c  quad_dec.h  systime.c  systime.h  tacho.c  usb.c  usb.h  vars.h
Digital/CS301_Class.cydsn/TopDesign/: TopDesign.cysch  TopDesign_01.cymacro  TopDesign_02.cymacro
Digital/CS301_Class.cydsn/algorithm/: CMakeLists.txt  graph_astar.c  graph_astar.h  graph_travel_all.c  graph_travel_all.h  pathfinder.c  pathfinder.h
Digital/CS301_Class.cydsn/control/: motor_controller.c  motor_controller.h  path_controller.c  path_controller.h  pid.c  pid.h  sensors_controller.c  sensors_controller.h
Digital/CS301_Class.cydsn/data/: CMakeLists.txt  graph.c  graph.h  linked_list.c  linked_list.h  node.c  node.h  point.h  priority_queue.c  priority_queue.h  vector.c  vector.h  voidtypes.h
Digital/CS301_Class.cydsn/system/: adc.c  adc.h  analog.c  analog.h  debug.c  debug.h  interactive.c  interactive.h  memory.c  memory.h  motor.c  motor.h  quad_dec.c  quad_dec.h  sensors.c  sensors.h  signals.c  signals.h  systime.c  systime.h  usb.c  usb.h  wireless.c  wireless.h
Digital/CS301_Class.cydsn/tests/: CMakeLists.txt  minunit.h  test_graph.c  test_graph_astar.c  test_graph_travel_all.c  test_linked_list.c  test_pathfinder.c  test_priority_queue.c  test_vector.c
Digital/Robot.cydsn/: Robot.cyprj
Digital/Robot.cydsn/TopDesign/: TopDesign.cysch
Matlab/: dfs.asv  findNextPosition.asv  findNextPosition.m
Matlab/a-star/: map_convert.m
Matlab/adj-list-a-star/: AListGraph.m  GraphNode.m  SimpleGraph.m  WaypointGraph.m  map.txt  pathfinder.m  testmap.txt
Matlab/adj-list-a-star/algorithms/: graph_astar.m  graph_astar_inertia.m  graph_bfs.m  graph_cpm.m  graph_djs.m  graph_make_eulerian.m  graph_travel_all.m
Matlab/adj-list-a-star/models/: Graph.m  GraphArc.m  GraphEdge.m  GraphNode.m  PriorityQueue.m
Matlab/arj-a-star/: dfs.m
Matlab/bfs/: SimpleGraph.m  generate_graph.m  graphid2mat.m  mat2graphid.m
Python/py-graph-gen/: map2hex.py
Simulation/a-star/: Node.m  SimpleGraph.m  Waypoint.m  WaypointGraph.m
Simulation/bfs/: Queue.m  dfs.m  generate_graph.m  search.m
